// Nexoria ERD
// Source of truth: backend/src/main/resources/db/migration
// Updated: 2026-04-26

Project Nexoria {
  database_type: 'MySQL 8 Flyway schema'
  Note: '''
  Public flow: Get Started and Book a Call create leads, scheduled calls, and draft/assigned blueprint context.
  Admin flow: admins manage leads, calls, users, schedule settings, support messages, and blueprint approval/client visibility.
  Client flow: eligible client users see their booked call, approved client-visible blueprint fixes, results state, and support thread.

  MySQL compatibility notes:
  - Application enums are persisted as VARCHAR(50) in Flyway migrations even though DBML enums are used here for readability.
  - BOOLEAN fields map to MySQL BOOLEAN/TINYINT(1).
  - Temporal fields mirror the Flyway schema's TIMESTAMP usage.
  - Field definitions below are aligned to V1-V7 migration history.
  - score, ready_for_retainer, and external-signal weather fields remain as legacy compatibility columns but are no longer part of the active product flow.
  '''
}

Enum user_role {
  USER
  ADMIN
  VIEWER
}

Enum user_status {
  ACTIVE
  PENDING
}

Enum lead_status {
  NEW
  CONTACTED
  BOOKED
  QUALIFIED
  CLOSED
}

Enum blueprint_status {
  DRAFT
  SUBMITTED
  APPROVED
  ARCHIVED
}

Enum purchase_event_type {
  PURCHASE
  DEPOSIT
  BOOKED_JOB
}

Enum task_owner {
  CLIENT
  NEXORIA
  SHARED
}

Enum task_status {
  NOT_STARTED
  IN_PROGRESS
  BLOCKED
  DONE
}

Enum call_source {
  BOOK_A_CALL
  GET_STARTED
}

Enum scheduled_call_status {
  BOOKED
  CLEARED
}

Enum support_message_sender {
  CLIENT
  ADMIN
}

Table users {
  id bigint [pk, increment]
  email varchar(320) [not null, unique]
  username varchar(32) [unique]
  password_hash varchar(255) [not null]
  role user_role [not null]
  status user_status [not null, default: 'ACTIVE']
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table blueprints {
  id bigint [pk, increment]
  user_id bigint [not null]
  url varchar(2048) [not null]
  industry varchar(255) [not null]
  revenue_range varchar(255) [not null]
  client_email varchar(320)
  score int [not null]
  ready_for_retainer boolean [not null]
  status blueprint_status [not null, default: 'DRAFT']
  purchase_event_type purchase_event_type [not null, default: 'DEPOSIT']
  created_at timestamp [not null]
  updated_at timestamp
}

Table blueprint_goals {
  blueprint_id bigint [not null]
  goal varchar(1024) [not null]

  Note: 'Selected goals from the Get Started intake, rendered in the client blueprint preview.'
}

Table blueprint_fixes {
  blueprint_id bigint [not null]
  title varchar(1024)
  impact varchar(1024)
  effort varchar(1024)
  why varchar(2048)
  owner task_owner [not null, default: 'NEXORIA']
  status task_status [not null, default: 'NOT_STARTED']
  client_visible boolean [not null, default: true]

  Note: 'Admin-controlled fixes/tasks. Client portal only shows records where client_visible is true on an approved blueprint.'
}

Table leads {
  id bigint [pk, increment]
  user_id bigint
  company varchar(255) [not null]
  contact_name varchar(255) [not null]
  email varchar(320) [not null]
  website varchar(2048)
  industry varchar(255)
  notes varchar(4000)
  status lead_status [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table schedule_settings {
  id bigint [pk]
  timezone varchar(64) [not null]
  slot_duration_minutes int [not null]
  booking_horizon_days int [not null]
}

Table availability_windows {
  id bigint [pk, increment]
  day_of_week varchar(20) [not null]
  start_time time [not null]
  end_time time [not null]
  active boolean [not null, default: true]
}

Table scheduled_calls {
  id bigint [pk, increment]
  lead_id bigint
  source call_source [not null]
  status scheduled_call_status [not null]
  company varchar(255) [not null]
  contact_name varchar(255) [not null]
  email varchar(320) [not null]
  website varchar(2048)
  industry varchar(255)
  notes varchar(4000)
  scheduled_start timestamp [not null]
  scheduled_end timestamp [not null]
  timezone varchar(64) [not null]
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table support_messages {
  id bigint [pk, increment]
  client_user_id bigint
  client_email varchar(320) [not null]
  business_name varchar(255)
  sender support_message_sender [not null]
  body varchar(4000) [not null]
  created_at timestamp [not null]

  Note: 'Support thread messages are persisted here and streamed to the admin/client UI with Server-Sent Events.'
}

Ref: blueprints.user_id > users.id
Ref: blueprint_goals.blueprint_id > blueprints.id [delete: cascade]
Ref: blueprint_fixes.blueprint_id > blueprints.id [delete: cascade]
Ref: leads.user_id > users.id
Ref: scheduled_calls.lead_id > leads.id
Ref: support_messages.client_user_id > users.id

// Workflow-level associations enforced by application logic:
// blueprints.client_email matches users.email for the client portal approved blueprint view.
// scheduled_calls.email matches users.email for the client portal scheduled-call card.
// support_messages.client_email groups admin/client support threads.
// client registration is allowed only when a lead email has BOOKED or CLOSED status.
// lead deletion clears scheduled_calls.lead_id before removing the lead.
// user deletion clears leads.user_id and support_messages.client_user_id before removing the user.
